# odatse-specx

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_generate_input.md  README_optimize_composition.md  README_test.md  RELEASE_NOTES_v1.0.0.md  generate_input.py  hea_mapper.toml  odatse-specx.code-workspace  optimize_composition.py  pyproject.toml  pytest.ini  test_generate_input.py  test_optimize_composition.py
.github/workflows/: test.yml
examples/: README.md
examples/hea_3element/: config.toml
examples/hea_5element/: config.toml
examples/hea_band_energy/: config.toml
examples/hea_debug/: config.toml
examples/hea_fine_grid/: config.toml
examples/hea_magnetization/: config.toml
examples/hea_mock_test/: config.toml
examples/hea_total_energy/: config.toml
examples/hea_with_env/: config.toml
odats/output/: colormap_HEA.txt
odats/output/0/: colormap_HEA.txt
refs/REBCO/test-1/: test.out  test_modified.in  test_modified_2.in
refs/odatse-specx/test-1/: test.in
test/: conftest.py  test_generate_input.py  test_optimize_composition.py
test/refs/: pot.dat.info
